--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,3 +19,11 @@ jobs:
 
       - name: Build
         run: scons
+        
+      - name: Archive production artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: build
+          path: |
+            build
+
